--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools"]
 [project]
 name = "smhi"
 version = "0.0.1"
-dependencies = ["httpx"]
+dependencies = ["httpx", "pydantic"]
 
 [project.optional-dependencies]
 tests = ["pytest"]
